--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-relay",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "relay messages through peers in a network",
   "main": "index.js",
   "bin": "server.js",
@@ -17,6 +17,9 @@
       "it",
       "describe"
     ]
+  },
+  "browser": {
+    "ws": false
   },
   "repository": "https://github.com/xuset/peer-relay",
   "author": "Austin Middleton",
